--- a/src/app/home/main/main.component.html
+++ b/src/app/home/main/main.component.html
@@ -56,9 +56,9 @@
                             <dt>인원</dt>
                             <dd>
                                 <div class="countNum_box">
-                                    <button class="minus_btn" (click)="srch.guest = srch.guest === 2 ? 2 : srch.guest - 1"></button>
-                                    <input type="text" class="count_inp" [value]="srch.guest" disabled>
-                                    <button class="plus_btn" (click)="srch.guest = srch.guest === 15 ? 15 : srch.guest + 1"></button>
+                                    <button class="minus_btn" (click)="srch.GuestMax = srch.GuestMax === 2 ? 2 : srch.GuestMax - 1"></button>
+                                    <input type="text" class="count_inp" [value]="srch.GuestMax" disabled>
+                                    <button class="plus_btn" (click)="srch.GuestMax = srch.GuestMax === 15 ? 15 : srch.GuestMax + 1"></button>
                                 </div>
                             </dd>
                         </dl>
@@ -66,7 +66,7 @@
                     <!-- //레이어 팝업(인원) -->
                     <dl (click)="guestToggle = !guestToggle">
                         <dt>인원수</dt>
-                        <dd>{{srch.guest}}명</dd>
+                        <dd>{{srch.GuestMax}}명</dd>
                     </dl>
                 </div>
                 <button class="reserv_item reserv_btn" (click)="srchList()">예약하기</button>
