--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -1,4 +1,3 @@
-
 /** 초기화 **/
 html, body { height: 100%; color: #333; font-family: 'Noto Sans KR', sans-serif; font-size: 16px; word-break: keep-all; }
 html, body, div, p, span, a, img, h1, h2, h3, h4, h5, label, input, button, textarea, header, footer, section, nav, ul, li, dl, dt, dd { margin: 0; padding: 0; border: 0; box-sizing: border-box; font-family: 'Noto Sans KR', sans-serif; font-weight: 400; }
@@ -89,10 +88,12 @@ button { cursor: pointer; }
 
 .reserv_box .reserv_layer.number { left: -1px; width: 220px; padding: 30px; }
 .reserv_layer.number dt { color: #666; font-size: 15px; }
-.reserv_layer.number .countNum_box button { width: 40px; height: 40px; border: 1px solid #ddd; vertical-align: middle; }
-.reserv_layer.number .countNum_box .minus_btn { background: url('../images/minus.png') 50% 50% no-repeat; }
-.reserv_layer.number .countNum_box .plus_btn { background: url('../images/plus.png') 50% 50% no-repeat; }
-.reserv_layer.number .countNum_box .count_inp { width: 50px; height: 40px; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; text-align: center; font-size: 15px; }
+
+/* 카운트 박스 */
+.countNum_box button { width: 40px; height: 40px; border: 1px solid #ddd; vertical-align: middle; }
+.countNum_box .minus_btn { background: url('../images/minus.png') 50% 50% no-repeat; }
+.countNum_box .plus_btn { background: url('../images/plus.png') 50% 50% no-repeat; }
+.countNum_box .count_inp { width: 50px; height: 40px; border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; text-align: center; font-size: 15px; }
 
 /** 추천 상품 **/
 .recomm_box ul li { position: relative; width: 32%; height: 300px; margin-bottom: 20px; margin-right: 2%; }
