객실리스트 퍼블수정 및 기능 추가 	modified:   src/app/home/home.module.ts 	modified:   src/app/home/unit-list/unit-list.component.html 	modified:   src/app/home/unit-list/unit-list.component.scss 	modified:   src/app/home/unit-list/unit-list.component.ts

--- a/src/app/home/unit-list/unit-list.component.html
+++ b/src/app/home/unit-list/unit-list.component.html
@@ -48,9 +48,6 @@
                 <ul class="nm_list">
                     <!-- loop -->
                     <li *ngFor="let item of list">
-                        <div class="list_check">
-                            <input type="checkbox" disabled>
-                        </div>
                         <div class="list_img">
                             <img src="assets/images/thumb/thumb1.png" alt="">
                         </div>
@@ -62,6 +59,9 @@
                                 <h3>{{ item.roomNm }}</h3>
                                 <p class="list_sub_desc">
                                     인원: 기준 {{ item.baseInfo[0].GuestStd }}명 / 최대 {{ item.baseInfo[0].GuestMax }}명<br>
+                                    영/유아기준: {{ item.baseInfo[0].InfantMonth}}개월<br>
+                                    <span *ngIf="item.baseInfo[0].PetMax > 0">애견: 기준 {{ item.baseInfo[0].PetStd }}마리 / 최대 {{ item.baseInfo[0].PetMax }}마리<br></span>
+                                    <span *ngIf="!item.baseInfo[0].PetMax && item.baseInfo[0].PetMax == 0">애견입실불가<br></span>
                                     유형/크기: {{ item.baseInfo[0].UnitTy === 'CARAVAN' ? '카라반' : '글램핑' }}/{{ item.baseInfo[0].UnitWidth }}평<br>
                                     시설: 
                                     <span *ngFor="let fac of item.facInfo; last as isLast">
@@ -83,33 +83,33 @@
                                     </div>
                                 </div>
                                 <div class="option_item">
-                                    <span>아동</span>
+                                    <span>영/유아</span>
                                     <div class="countNum_box">
                                         <button class="minus_btn" (click)="setGuest(item, 'infant', '-')"></button>
                                         <input type="text" class="count_inp" [value]="item.infant" disabled>
                                         <button class="plus_btn" (click)="setGuest(item, 'infant', '+')"></button>
                                     </div>
                                 </div>
-                                <div class="option_item">
-                                    <span>유아</span>
+                                <div class="option_item" *ngIf="item.baseInfo[0].PetMax > 0">
+                                    <span>애견</span>
                                     <div class="countNum_box">
-                                        <button class="minus_btn"></button>
-                                        <input type="text" class="count_inp" value="5" disabled>
-                                        <button class="plus_btn"></button>
+                                        <button class="minus_btn" (click)="setPet(item, '-')"></button>
+                                        <input type="text" class="count_inp" [value]="item.pet" disabled>
+                                        <button class="plus_btn" (click)="setPet(item, '+')"></button>
                                     </div>
                                 </div>
                             </div>
                             <div class="add_option">
-                                <button class="option_title">옵션추가</button>
-                                <div class="add_option_box">
+                                <button class="option_title" (click)="item.toggleOption = !item.toggleOption">옵션추가</button>
+                                <div class="add_option_box" *ngIf="item.toggleOption">
                                     <!-- 추가된 옵션 -->
-                                    <div class="option_item" *ngFor="let added of item.options">
-                                        <button class="del_btn"></button>
-                                        <span>{{ added.ItemNm }}</span>
+                                    <div class="option_item" *ngFor="let added of item.options; let index = index">
+                                        <button class="del_btn" (click)="delOption(item, index)"></button>
+                                        <span>{{ added.ItemNm }}<br>{{ added.ItemPrice | comma }}원</span>
                                         <div class="countNum_box">
-                                            <button class="minus_btn" (click)="setOption(added, '-')"></button>
+                                            <button class="minus_btn" (click)="setOption(item, added, '-')"></button>
                                             <input type="text" class="count_inp" [value]="added.totalCnt" disabled>
-                                            <button class="plus_btn" (click)="setOption(added, '+')"></button>
+                                            <button class="plus_btn" (click)="setOption(item, added, '+')"></button>
                                         </div>
                                     </div>
                                     <!-- //추가된 옵션 -->
@@ -125,6 +125,10 @@
                             <div class="list_price">
                                 <p class="orig_price" *ngIf="item.saleRate > 0">{{ item.DFTPrice}}원</p>
                                 <span class="point_c"><b *ngIf="item.saleRate > 0">{{ item.saleRate }}</b></span> {{ item.roomPrice + item.addGuestPrice + item.addPetPrice + item.addOptionPrice | comma }}원
+                            </div>
+                            <div class="list_selected">
+                                <button mat-stroked-button *ngIf="!item.selected" (click)="item.selected = true"><i class="fa fa-check"></i>    선택</button>
+                                <button mat-flat-button color="primary" *ngIf="item.selected" (click)="item.selected = false"><i class="fa fa-check"></i>    선택</button>
                             </div>
                         </div>
                     </li>
