--- a/src/app/home/unit-list/unit-list.component.scss
+++ b/src/app/home/unit-list/unit-list.component.scss
@@ -92,3 +92,12 @@ h2 { margin: 80px 0 20px 0; font-size: 32px; font-weight: 700; }
 .list_selected{
     button{ width: 100%; }
 }
+.pay_reserve{
+    padding: 10px 0;
+    text-align: end;
+
+    button{
+        width: 200px;
+        margin-left: 20px;
+    }
+}
