--- a/src/app/home/unit-list/unit-list.component.scss
+++ b/src/app/home/unit-list/unit-list.component.scss
@@ -101,3 +101,27 @@ h2 { margin: 80px 0 20px 0; font-size: 32px; font-weight: 700; }
         margin-left: 20px;
     }
 }
+.info_list_deco_disc{
+    ul, li{ list-style: disc inside;}
+}
+
+.info_wrap{
+    margin: 30px;
+    padding: 50px;
+    background-color: #f6f6f6;
+
+    &> div:not(:first-of-type){ 
+        margin-top: 20px;
+    }
+    
+    &> div{
+        h3{
+            color: #555;
+            font-size: 17px;
+        }
+        ul{
+            color: #777;
+            font-size: 15px;
+        }
+    }
+}
