--- a/src/app/shared/swiper/swiper.component.scss
+++ b/src/app/shared/swiper/swiper.component.scss
@@ -1,13 +1,18 @@
 .swiper-container {
     width: 100%;
     height: 300px;
-    margin: 50px auto;
-  }
-  
-  .swiper-slide {
-    background: #f1f1f1;
-    color: #000;
-    text-align: center;
-    line-height: 300px;
-  }
+}
+
+.swiper-slide {
+  background: #f1f1f1;
+  color: #000;
+  text-align: center;
+  line-height: 300px;
+}
+
+.accom_thumb{
+  width: 50%;
+  height: 150px;
+  margin: 0;
+}
   
