사진 상세보기 모달 생성 alert 모달 생성 함수 수정 swiper 컴포넌트 height 변수로 전달 	modified:   src/app/service/dialog.service.ts 	modified:   src/app/shared/file-attach/file-attach.component.ts 	modified:   src/app/shared/img-multi/img-multi.component.ts 	modified:   src/app/shared/img-single/img-single.component.ts 	new file:   src/app/shared/modal/img-viewer/img-viewer.component.html 	new file:   src/app/shared/modal/img-viewer/img-viewer.component.scss 	new file:   src/app/shared/modal/img-viewer/img-viewer.component.spec.ts 	new file:   src/app/shared/modal/img-viewer/img-viewer.component.tns.html 	new file:   src/app/shared/modal/img-viewer/img-viewer.component.tns.scss 	new file:   src/app/shared/modal/img-viewer/img-viewer.component.ts 	modified:   src/app/shared/shared.module.tns.ts 	modified:   src/app/shared/shared.module.ts 	modified:   src/app/shared/swiper/swiper.component.html 	modified:   src/app/shared/swiper/swiper.component.scss 	modified:   src/app/shared/swiper/swiper.component.ts

--- a/src/app/shared/swiper/swiper.component.html
+++ b/src/app/shared/swiper/swiper.component.html
@@ -1,17 +1,24 @@
 <swiper [slidesPerView]="1" [spaceBetween]="50" [navigation]="true" [pagination]="{ clickable: true }"
-    [thumbs]="{ swiper: thumbsSwiper }">
-    <ng-template swiperSlide><div style="height: 100%; background-color: aliceblue;">Slide 1</div></ng-template>
+    class="main_image" [thumbs]="{ swiper: thumbsSwiper }" [ngStyle]="{'height': mainHeight}">
+    <ng-template swiperSlide *ngFor="let item of images">
+        <img src="{{ item.link }}" alt="" class="image_frame">
+    </ng-template>
+    <!-- <ng-template swiperSlide><div style="height: 100%; background-color: aliceblue;">Slide 1</div></ng-template>
     <ng-template swiperSlide><div style="height: 100%; background-color: antiquewhite;">Slide 2</div></ng-template>
     <ng-template swiperSlide><div style="height: 100%; background-color: aqua;">Slide 3</div></ng-template>
     <ng-template swiperSlide><div style="height: 100%; background-color: aquamarine;">Slide 4</div></ng-template>
     <ng-template swiperSlide><div style="height: 100%; background-color: azure;">Slide 5</div></ng-template>
-    <ng-template swiperSlide><div style="height: 100%; background-color: bisque;">Slide 6</div></ng-template>
+    <ng-template swiperSlide><div style="height: 100%; background-color: bisque;">Slide 6</div></ng-template> -->
 </swiper>
-<swiper [slidesPerView]="3" [spaceBetween]="0" (swiper)="setThumbsSwiper($event)" [navigation]="{}" class="accom_thumb">
-    <ng-template swiperSlide><div style="height: 100%; background-color: aliceblue;">Slide 1</div></ng-template>
+<swiper [slidesPerView]="4" [spaceBetween]="5" (swiper)="setThumbsSwiper($event)" [navigation]="{}" 
+    class="thumb_image" [ngStyle]="{'height': thumbHeight}">
+    <ng-template swiperSlide *ngFor="let item of images">
+        <img src="{{ item.link }}" alt="" class="image_frame">
+    </ng-template>
+    <!-- <ng-template swiperSlide><div style="height: 100%; background-color: aliceblue;">Slide 1</div></ng-template>
     <ng-template swiperSlide><div style="height: 100%; background-color: antiquewhite;">Slide 2</div></ng-template>
     <ng-template swiperSlide><div style="height: 100%; background-color: aqua;">Slide 3</div></ng-template>
     <ng-template swiperSlide><div style="height: 100%; background-color: aquamarine;">Slide 4</div></ng-template>
     <ng-template swiperSlide><div style="height: 100%; background-color: azure;">Slide 5</div></ng-template>
-    <ng-template swiperSlide><div style="height: 100%; background-color: bisque;">Slide 6</div></ng-template>
+    <ng-template swiperSlide><div style="height: 100%; background-color: bisque;">Slide 6</div></ng-template> -->
 </swiper>
