--- a/src/app/shared/swiper/swiper.component.scss
+++ b/src/app/shared/swiper/swiper.component.scss
@@ -1,6 +1,5 @@
-.swiper-container {
+.main_image {
     width: 100%;
-    height: 300px;
 }
 
 .swiper-slide {
@@ -10,9 +9,14 @@
   line-height: 300px;
 }
 
-.accom_thumb{
-  width: 50%;
-  height: 150px;
-  margin: 0;
+.thumb_image{
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 10px;
+}
+
+.image_frame{
+  width: 100%;
+  height: 100%;
 }
   
